--- a/src/containers/LoginComponent/LoginComponent.module.css
+++ b/src/containers/LoginComponent/LoginComponent.module.css
@@ -6,13 +6,13 @@
   width: 100%;
 }
 
-li {
+.form_li {
   display: flex;
   flex-direction: row;
   margin-left: 30px;
 }
 
-input {
+.form_input {
   height: 30px;
   outline: 0;
   border: 0;
@@ -25,11 +25,11 @@ input {
   color: ;
 }
 
-input::placeholder {
+.form_input::placeholder {
   color: rgba(0, 0, 0, 0.2);
 }
 
-button {
+.login_button {
   height: 50px;
   width: 150px;
   font-size: 18px;
@@ -43,23 +43,34 @@ button {
   margin-top: 5px;
 }
 
-button:hover {
+.login_button:hover {
   border: #137a53;
   background-color: #137a53;
 }
 
-.close {
+.close_button {
+  height: 50px;
+  width: 150px;
+  font-size: 18px;
+  font-weight: bolder;
+  color: white;
+  background: #de2322;
+  border: none;
+  border-radius: 3px;
+  border: 2px #de2322 solid;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 5px;
   background: white;
   color: #de2322;
   align-self: center;
 }
 
-.close:hover {
+.close_button:hover {
   background-color: #de2322;
   color: white;
 }
 
-img {
+.login_icon_img {
   opacity: 0.3;
   height: 20px;
   width: auto;
@@ -84,11 +95,11 @@ img {
   padding-left: 10px;
 }
 
-span {
+.options_span {
   color: #0066ff;
 }
 
-span:hover {
+.options_span:hover {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -104,7 +115,7 @@ span:hover {
 .loginImg {
   display: inline-block;
   vertical-align: middle;
-  /* height: 15px; */
+  height: 15px;
   width: 20px;
   -webkit-filter: invert(100%);
   filter: invert(100%);
